--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  
   <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
   <dependencies>
     <dependency>
@@ -17,5 +18,20 @@
       <artifactId>spring-core</artifactId>
       <version>5.2.7.RELEASE</version>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+    <version>5.2.7.RELEASE</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-beans</artifactId>
+    <version>5.2.7.RELEASE</version>
+</dependency>
+
   </dependencies>
 </project>
